--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,25 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!--Button variables : text size and text colors-->
+    <color name="btn_txt_col">#808000</color>
+    <color name="btn_bkg_col">#008080</color>
+    <color name="home_bkg_col">#a64dff</color>
+    <color name="title_bkg_col">#ccccff</color>
+    <color name="btn_disable_col">#ccccc0</color>
+
+    <!--Color variables-->
+    <color name="h1_color">#00FFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="text_color">#C0C0C0</color>
+    <color name="olive">#808000</color>
+    <color name="purple">#800080</color>
+    <color name="lime">#00FF00</color>
+    <color name="green">#008000</color>
+    <color name="blue">#0000FF</color>
+    <color name="black">#000000</color>
+
+    <!--BgColor variables-->
+    <color name="layout_bkg_col">#00FFFF</color>
 </resources>
