--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,25 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <!--H1 variables-->
+    <dimen name="activity_vertical_margin">10dp</dimen>
+    <dimen name="activity_horizontal_margin">5dp</dimen>
+
+
+
+    <dimen name="h1_pd_btm">30dp</dimen>
+    <dimen name="h1_pd_top">5dp</dimen>
+    <dimen name="h1_txt_size">25sp</dimen>
+
+    <!--Button variables-->
+    <dimen name="btn_height">80dp</dimen>
+    <dimen name="btn_mg">5dp</dimen>
+    <dimen name="btn_mg_top">5dp</dimen>
+    <dimen name="btn_mg_btm">5dp</dimen>
+    <dimen name="btn_mg_left">5dp</dimen>
+    <dimen name="btn_mg_right">5dp</dimen>
+    <dimen name="btn_txt_size">25sp</dimen>
+
+    <dimen name="item_pdg">5dp</dimen>
 </resources>
